# neonatal_eeg

./: .gitignore  main.ipynb  main.py  pyproject.toml  requirements.txt  scripts.txt  structure.md  test.py  trainer_template.py  v1.1.py  v1.2.py  v1.3.py  v1.py
ttest_results/: combined_ttest.txt  patient_wise_ttest.txt
