[project]
name = "rcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antropy>=0.1.9",
    "cupy-cuda12x>=13.6.0 ; sys_platform == 'linux' or sys_platform == 'win32'",
    "mne>=1.11.0",
    "nolds>=0.6.3",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "psutil>=7.2.1",
    "pywavelets>=1.9.0",
    "scipy>=1.17.0",
]
